Adiciona funcionalidade de menu mobile

--- a/index.html
+++ b/index.html
@@ -198,6 +198,15 @@
             <p>&copy; 2024 Cartório. Todos os direitos reservados.</p>
         </div>
     </footer>
+<script>
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navMenu = document.querySelector('.nav-menu');
 
+    menuToggle.addEventListener('click', () => {
+        navMenu.classList.toggle('active');
+    });
+</script>
+</body>
+</html>
 </body>
 </html>
