Atualizando cores das ondas e o botão do WhatsApp

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                 <a href="#sobre" class="nav-link">Sobre</a>
                 <a href="#contato" class="nav-link">Contato</a>
             </div>
-            <a href="#" class="btn-primary">
-                Agende Agora
+            <a href="https://w.app/cartoriodenotas" class="btn-primary" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="icon">
+                WhatsApp
             </a>
 
             <!-- Botão do menu mobile (hamburguer) -->
@@ -43,7 +44,6 @@
     <main>
         <!-- Seção Hero (Destaque Principal) -->
         <section class="hero-section">
-              
                 <div class="wave">
                     <span></span>
                     <span></span>
@@ -55,7 +55,7 @@
                     Serviços Notariais com <span class="accent-text">Confiança e Eficiência</span>
                 </h1>
                 <p class="hero-subtitle">
-                    Transformamos processos burocráticos em experiências simples e seguras.
+                    Desde 1984, prestando serviços notariais com segurança jurídica e credibilidade.
                 </p>
                 <a href="#contato" class="btn-gradient">
                     Saiba Mais
@@ -150,7 +150,7 @@
                     </p>
                 </div>
                 <div class="about-image-container">
-                    <img src="Captura de Tela 2025-08-25 às 13.16.33.png" alt="Imagem do escritório do cartório" class="about-image">
+                    <img src="Copilot_20250904_072000.png" alt="Imagem do escritório do cartório" class="about-image">
                 </div>
             </div>
         </section>
@@ -179,8 +179,10 @@
                     <div class="contact-card">
                         <h3 class="card-title">Contato</h3>
                         <p class="card-text">
-                            (XX) 9XXXX-XXXX<br>
-                            email@cartorio.com.br
+                            (12)3642-5150<br>
+                            cartoriodepinda@gmail.com
+                            cartoriodepinda@hotmail.com
+                            Protestopinda@hotmail.com
                         </p>
                     </div>
                 </div>
@@ -195,7 +197,8 @@
     <!-- Rodapé (Footer) -->
     <footer class="footer">
         <div class="container text-center">
-            <p>&copy; 2024 Cartório. Todos os direitos reservados.</p>
+            <p>&copy; 1984 Cartório de Pindamonhangaba. Todos os direitos reservados.
+                 Serviços notariais com excelência, segurança e agilidade.</p>
         </div>
     </footer>
 <script>
